# voxelToy

./: .gitignore  CMakeLists.txt  README.md
qtcreator/voxelToyUI/: voxelToyUI.pro
resources/: aabb.h  accumulation.fs  coordinates.h  dda.fs  dda.h  focalDistance.fs  raymarch.fs  raymarch.vs  sampling.h  textureMap.fs
src/: camera.cpp  camera.h  content.cpp  content.h  glwidget.cpp  glwidget.h  gpuTimer.cpp  gpuTimer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mesh.cpp  mesh.h  meshLoader.cpp  meshLoader.h  noise.cpp  noise.h  renderer.cpp  renderer.h  shader.cpp  shader.h  voxLoader.cpp  voxLoader.h  voxelizer.cpp
src/camera/: camera.cpp  camera.h  cameraController.cpp  cameraController.h  cameraParameters.cpp  cameraParameters.h  flyCameraController.cpp  flyCameraController.h  orbitCameraController.cpp  orbitCameraController.h
src/log/: logger.cpp  logger.h
src/mesh/: mesh.cpp  mesh.h  meshLoader.cpp  meshLoader.h
src/renderer/: actions.cpp  actions.h  content.cpp  content.h  glResources.h  image.cpp  image.h  import.cpp  material.h  noise.cpp  renderSettings.h  renderer.cpp  renderer.h
src/renderer/loaders/: magicaVoxel.cpp  magicaVoxel.h  voxLoader.cpp  voxLoader.h  voxSlap.cpp  voxSlap.h
src/renderer/material/: material.cpp  material.h
src/renderer/services/: service.cpp  service.h  serviceAddVoxel.cpp  serviceAddVoxel.h  servicePicking.cpp  servicePicking.h  serviceRemoveVoxel.cpp  serviceRemoveVoxel.h  serviceSelectActiveVoxel.cpp  serviceSelectActiveVoxel.h  serviceSetFocalDistance.cpp  serviceSetFocalDistance.h
src/shaders/: ao.h  bsdf.h  dda.fs  dda.h  focalDistance.fs  generateRay.h  pathTracer.fs  random.h  sampling.h  shader.cpp  shader.h  voxelize.gs
src/shaders/bsdf/: bsdf.h  lambertian.h  microfacet.h
src/shaders/editVoxels/: addVoxel.vs  removeVoxel.vs  selectVoxel.vs  selectVoxelDevice.h  selectVoxelHost.h
src/shaders/envLight/: envMapSample.h
src/shaders/focalDistance/: focalDistance.fs  focalDistance.vs  focalDistanceDevice.h  focalDistanceHost.h
src/shaders/glsl/: aabb.h  generateRay.h  lights.h  pathTracer.fs  voxelize.gs
src/shaders/integrator/: editMode.fs  pathTracer.fs
src/shaders/materials/: materials.h  matte.h  metal.h  plastic.h
src/shaders/selectVoxel/: selectVoxel.fs  selectVoxel.vs  selectVoxelDevice.h  selectVoxelHost.h
src/shaders/shared/: accumulation.fs  color.h  constants.h  coordinates.h  dda.h  generateRay.h  lights.h  pathTracer.fs  random.h  sampling.h  screenSpace.vs  textureMap.fs  trivial.fs  voxelize.gs  voxelize.vs
src/svo/: morton.cpp  morton.h  svo.cpp  svo.h  voxelizer.cpp  voxelizer.h
src/timer/: gpuTimer.cpp
src/tools/: tool.h  toolAddRemoveVoxel.cpp  toolAddRemoveVoxel.h  toolAddVoxel.cpp  toolAddVoxel.h  toolFocalDistance.cpp  toolFocalDistance.h
src/ui/: camerapropertiesui.cpp  camerapropertiesui.h  camerapropertiesui.ui  colorpicker.cpp  colorpicker.h  glwidget.cpp  glwidget.h  logwindow.cpp  logwindow.h  logwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  renderpropertiesui.cpp  renderpropertiesui.h  renderpropertiesui.ui  resources.qrc
src/ui/icons/: License.txt
src/voxelize/: cpuVoxelizer.cpp  cpuVoxelizer.h  gpuVoxelizer.cpp  gpuVoxelizer.h
